[tool.poetry]
name = "aci-mkdocs"
version = "0.0.1"
description = ""
authors = ["Luketss <lucassilluzio@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocs-swagger-ui-tag = "^0.6.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
